--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -8,4 +8,4 @@ $dark-primary: #1a2f5b;
 $text-size: 1rem;
 $title-family: 'Sulphur Point', sans-serif;
 $text-family: Calibri, "Gill Sans", "Gill Sans MT", "Trebuchet MS", sans-serif;
-$shadow-card:4px 4px 6px rgb(189, 189, 189);
+$shadow-card:4px 4px 4px rgb(211, 211, 211);
